# AI-BE-technical-assignment

./: README.md  pyproject.toml
app/: main.py
app/core/: config.py  llm_services.py  vector_db.py
app/routers/: inference.py
app/schemas/: inference.py
app/services/: inference_service.py
app/test/core/: test_llm_services.py  test_vector_db.py
app/test/routers/: test_inference_routers.py
app/test/schemas/: test_inference_schemas.py
app/test/services/: test_inference_service.py
example_datas/: langchain_setup_company_data.py  langchain_setup_company_news_data.py  langchain_setup_univeristy_rank_data.py  university_rank.csv
